<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

	<groupId>br.inpe.cap</groupId>
	<artifactId>asniffer</artifactId>
	<version>2.3.0</version>
	<packaging>jar</packaging>
	<name>asniffer</name>
	<url>http://maven.apache.org</url>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>
	
	<dependencies>
	    <dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.13.1</version>
		    <scope>test</scope>
		</dependency>
	    <dependency>
	      <groupId>org.eclipse.jdt</groupId>
	      <artifactId>org.eclipse.jdt.core</artifactId>
	      <version>3.12.2</version>
	    </dependency>
	    <dependency>
		  <groupId>com.google.guava</groupId>
		  <artifactId>guava</artifactId>
		  <version>[24.1.1,)</version>
		</dependency>
	    <dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.0</version>
		</dependency>
		<dependency>
		    <groupId>io.github.lukehutch</groupId>
		    <artifactId>fast-classpath-scanner</artifactId>
		    <version>2.18.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>2.13.2</version>
		</dependency>
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		    <version>2.4.0-b180830.0359</version>
		</dependency>
		<dependency>
		    <groupId>com.google.code.gson</groupId>
		    <artifactId>gson</artifactId>
		    <version>2.8.6</version>
		</dependency>
		<dependency>
		    <groupId>com.opencsv</groupId>
		    <artifactId>opencsv</artifactId>
		    <version>5.2</version>
		</dependency>
		<dependency>
		    <groupId>net.sf.esfinge</groupId>
		    <artifactId>metadata</artifactId>
		    <version>1.5.10</version>
		</dependency>
		<dependency>
		    <groupId>commons-beanutils</groupId>
		    <artifactId>commons-beanutils</artifactId>
		    <version>1.9.4</version>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-assembly-plugin</artifactId>
			    <executions>
			        <execution>
			        	<phase>package</phase>
			            <goals>
			                <goal>single</goal>
			            </goals>
			            <configuration>
			                <archive>
			                <manifest>
			                    <mainClass>br.inpe.cap.asniffer.Main</mainClass>
			                </manifest>
			                </archive>
			                <descriptorRefs>
					        	<descriptorRef>jar-with-dependencies</descriptorRef>
					        </descriptorRefs>
					        <finalName>asniffer</finalName>
					        <appendAssemblyId>false</appendAssemblyId>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
		</plugins>
	</build>
</project>